--- a/tests/Application.UnitTests/Application.UnitTests.csproj
+++ b/tests/Application.UnitTests/Application.UnitTests.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>RecruitmentTask.Application.UnitTests</RootNamespace>
-    <AssemblyName>RecruitmentTask.Application.UnitTests</AssemblyName>
+    <RootNamespace>ATSS.Application.UnitTests</RootNamespace>
+    <AssemblyName>ATSS.Application.UnitTests</AssemblyName>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
